--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
     "appName": {
-        "message": "Parallax IDE",
+        "message": "Perpendiculax IDE",
         "description": "The name of the application"
     },
     "appDescription": {
